# GoddessAnalysis

./: CMakeLists.txt  LICENSE  README.md  config.json
Cuts/ICCuts/: Pcut_p30dp0048.root
include/: Analysis.h  EnergyLoss.h  Utilities.h
src/: AnalysisRun.cpp  DownstreamAnalysis.cpp  FirstGamma.cpp  Q5Gamma.cpp  SX3Gamma.cpp  Utilities.cpp
